[gd_scene load_steps=8 format=2]

[ext_resource path="res://Carta.gd" type="Script" id=1]
[ext_resource path="res://Assets/Correct_Sound.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Wrong_Sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Soundtrack.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 253.812, 254.129 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.17, 0.17 ), Vector2( 0, 0.17 ), Vector2( 0.17, 0.17 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.17 ), Vector2( 0.17, 0.17 ) ]
}

[node name="Node2D" type="Sprite"]
scale = Vector2( 0.17, 0.17 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
shortcut_in_tooltip = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Button"]
position = Vector2( -18.6753, -18.6753 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D"]
position = Vector2( 274.675, 274.675 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Gira = SubResource( 2 )
anims/GiraVolta = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
scale = Vector2( 5.882, 5.882 )
volume_db = 6.433

[node name="Correct_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Wrong_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Soundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -49.476
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="area_entered" from="Button/Area2D" to="." method="_on_Area2D_area_entered"]
